core/Examples/Errors/e4.k
<type> nowy_typ <is> ['a,'b,'c];
<type> nowy_typ <is> ['a,'b];

nowy_type tot = ['f x :: y ] . z ;

{} forpat = ($x ['a  , 'b ] -> $x.a);

['a, 'b] tat = ['f x :: y ] . z ;

['b, 'a] tit = ['f x :: y ] . z ;